reemplazo de Stream.collect(Collectors.toList()) por Stream.toList() en la clase GestorPedidos.java